--- a/surfit/Makefile.am
+++ b/surfit/Makefile.am
@@ -142,6 +142,7 @@ libsurfit_la_SOURCES += src/surfit/f_area_wmean.cpp
 libsurfit_la_SOURCES += src/surfit/f_area_hist.cpp
 libsurfit_la_SOURCES += src/surfit/f_cntr.cpp                                                    
 libsurfit_la_SOURCES += src/surfit/f_cntr_ineq.cpp                                                    
+libsurfit_la_SOURCES += src/surfit/f_cntr_smooth.cpp
 libsurfit_la_SOURCES += src/surfit/f_completer.cpp                                               
 libsurfit_la_SOURCES += src/surfit/f_curv.cpp                                                    
 libsurfit_la_SOURCES += src/surfit/f_curv_ineq.cpp 
@@ -193,6 +194,7 @@ libsurfit_la_SOURCES += src/surfit/matrD2_rect.cpp
 libsurfit_la_SOURCES += src/surfit/matr_diag.cpp                                                 
 libsurfit_la_SOURCES += src/surfit/matr_eye.cpp                                                  
 libsurfit_la_SOURCES += src/surfit/matr_onesrow.cpp                                              
+libsurfit_la_SOURCES += src/surfit/matr_cntrs.cpp
 libsurfit_la_SOURCES += src/surfit/mrf.cpp                                                        
 libsurfit_la_SOURCES += src/surfit/others_tcl.cpp
 libsurfit_la_SOURCES += src/surfit/pnts_internal.cpp                                             
@@ -240,6 +242,7 @@ libsurfit_la_HEADERS += src/surfit/f_area_wmean.h
 libsurfit_la_HEADERS += src/surfit/f_area_hist.h
 libsurfit_la_HEADERS += src/surfit/f_cntr.h      
 libsurfit_la_HEADERS += src/surfit/f_cntr_ineq.h 
+libsurfit_la_HEADERS += src/surfit/f_cntr_smooth.h
 libsurfit_la_HEADERS += src/surfit/f_curv.h                 
 libsurfit_la_HEADERS += src/surfit/f_curv_ineq.h                 
 libsurfit_la_HEADERS += src/surfit/f_completer.h       
@@ -290,6 +293,7 @@ libsurfit_la_HEADERS += src/surfit/matrD2.h
 libsurfit_la_HEADERS += src/surfit/matr_diag.h         
 libsurfit_la_HEADERS += src/surfit/matr_eye.h          
 libsurfit_la_HEADERS += src/surfit/matr_onesrow.h      
+libsurfit_la_HEADERS += src/surfit/matr_cntrs.h
 libsurfit_la_HEADERS += src/surfit/mrf.h               
 libsurfit_la_SOURCES += src/surfit/other_tcl.h
 libsurfit_la_SOURCES += src/surfit/others_tcl.h
