--- a/surfit/vc7/surfit.vcproj
+++ b/surfit/vc7/surfit.vcproj
@@ -961,6 +961,9 @@
 					</FileConfiguration>
 				</File>
 				<File
+					RelativePath="..\src\surfit\matr_cntrs.cpp">
+				</File>
+				<File
 					RelativePath="..\src\surfit\matr_diag.cpp">
 					<FileConfiguration
 						Name="Debug|Win32">
@@ -4924,6 +4927,9 @@
 						</FileConfiguration>
 					</File>
 					<File
+						RelativePath="..\src\surfit\f_cntr_smooth.cpp">
+					</File>
+					<File
 						RelativePath="..\src\surfit\f_curv.cpp">
 						<FileConfiguration
 							Name="Debug|Win32">
@@ -5775,6 +5781,9 @@
 					RelativePath="..\src\surfit\matr.h">
 				</File>
 				<File
+					RelativePath="..\src\surfit\matr_cntrs.h">
+				</File>
+				<File
 					RelativePath="..\src\surfit\matr_diag.h">
 				</File>
 				<File
@@ -6024,6 +6033,9 @@
 					</File>
 					<File
 						RelativePath="..\src\surfit\f_cntr_ineq.h">
+					</File>
+					<File
+						RelativePath="..\src\surfit\f_cntr_smooth.h">
 					</File>
 					<File
 						RelativePath="..\src\surfit\f_curv.h">
