--- a/surfit/doc/surfit.cfg
+++ b/surfit/doc/surfit.cfg
@@ -110,6 +110,7 @@ INPUT                  = src/install.doc \
 			 src/stringmatch.doc \
 			 src/filematch.doc \
 			 src/formats.doc \
+			 src/penalty_factor.doc \
 			 ../src/surfit/cmofs.h \
 			 ../src/surfit/variables_tcl.h \
                          ../src/surfit/pnts_tcl.h \ 
