--- a/surfit/src/doc/surfit.cfg
+++ b/surfit/src/doc/surfit.cfg
@@ -1,10 +1,10 @@
-#  Doxyfile 1.4.6
+# Doxyfile 1.4.6
 
 #---------------------------------------------------------------------------
 # Project related configuration options
 #---------------------------------------------------------------------------
 PROJECT_NAME           = "surfit sources"
-PROJECT_NUMBER         = 2.1
+PROJECT_NUMBER         = 2.2
 OUTPUT_DIRECTORY       = 
 CREATE_SUBDIRS         = NO
 OUTPUT_LANGUAGE        = English
@@ -82,43 +82,15 @@ WARN_LOGFILE           = surfit.log
 #---------------------------------------------------------------------------
 # configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = ../sstuff/vec.h \
-			 ../sstuff/datafile.h \
-			 ../surfit/surfit.h \
-			 ../surfit/surfit_data.h \
-			 ../surfit/functional.h \
-			 ../surfit/grid.h \
-			 ../surfit/points.h \
-			 ../surfit/f_points.h \
-			 ../surfit/f_points_ineq.h \
-			 ../surfit/area.h \
-			 ../surfit/f_area.h \
-			 ../surfit/f_area_ineq.h \
- 			 ../surfit/f_area_mean.h \
-			 ../surfit/f_area_surf.h \ 
-  			 ../surfit/f_area_surf_ineq.h \
-			 ../surfit/f_area_wmean.h \
-  			 ../surfit/cntr.h \
-   			 ../surfit/f_cntr.h \
-			 ../surfit/f_cntr_ineq.h \
-			 ../surfit/curv.h \
-			 ../surfit/f_curv.h \
-			 ../surfit/f_curv_ineq.h \
- 			 ../surfit/f_curv_surf.h \
-			 ../surfit/f_curv_surf_ineq.h \
-			 ../surfit/surf.h \
-			 ../surfit/f_surf.h \
-			 ../surfit/f_surf_ineq.h \
-			 ../surfit/mask.h \
-			 ../surfit/f_mask.h \
-			 ../surfit/f_trend.h \
-			 ../surfit/f_completer.h
-FILE_PATTERNS          = *.doc
-RECURSIVE              = NO
-EXCLUDE                = 
+INPUT                  = groups.doc ../sstuff 
+#../surfit ../freeflow ../globe ../surfit_io
+FILE_PATTERNS          = *.doc \
+                         *.h
+RECURSIVE              = YES
+EXCLUDE                = ../sstuff/ptypes
 EXCLUDE_SYMLINKS       = NO
 EXCLUDE_PATTERNS       = 
-#EXAMPLE_PATH           = ../examples
+EXAMPLE_PATH           = 
 EXAMPLE_PATTERNS       = *.tcl
 EXAMPLE_RECURSIVE      = YES
 IMAGE_PATH             = .
@@ -213,11 +185,11 @@ PERLMOD_PRETTY         = YES
 PERLMOD_MAKEVAR_PREFIX = 
 #---------------------------------------------------------------------------
 # Configuration options related to the preprocessor   
-#---------------------------------------------------------------------------
-ENABLE_PREPROCESSING   = NO
+#--------------------------------------------------------------------------
+ENABLE_PREPROCESSING   = YES
 MACRO_EXPANSION        = NO
 EXPAND_ONLY_PREDEF     = NO
-SEARCH_INCLUDES        = YES
+SEARCH_INCLUDES        = NO
 INCLUDE_PATH           = 
 INCLUDE_FILE_PATTERNS  = 
 PREDEFINED             = 
@@ -259,5 +231,5 @@ GENERATE_LEGEND        = YES
 DOT_CLEANUP            = YES
 #---------------------------------------------------------------------------
 # Configuration::additions related to the search engine   
-#---------------------------------------------------------------------------
+#--------------------------------------------------------------------------
 SEARCHENGINE           = NO
