colorscale class was added
git-svn-id: svn://localhost/trunk@1163 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/Makefile.am
+++ b/surfit/Makefile.am
@@ -127,6 +127,7 @@ libsurfit_la_SOURCES += src/surfit/cntr.cpp
 libsurfit_la_SOURCES += src/surfit/cntr_internal.cpp                                             
 libsurfit_la_SOURCES += src/surfit/cntr_tcl.cpp                                                  
 libsurfit_la_SOURCES += src/surfit/cntr_trace.cpp                                                  
+libsurfit_la_SOURCES += src/surfit/colorscale.cpp                                                  
 libsurfit_la_SOURCES += src/surfit/curv.cpp                                                      
 libsurfit_la_SOURCES += src/surfit/curvs_tcl.cpp                                                  
 libsurfit_la_SOURCES += src/surfit/curv_internal.cpp                                             
@@ -227,6 +228,7 @@ libsurfit_la_HEADERS += src/surfit/cmofs.h
 libsurfit_la_HEADERS += src/surfit/cntr.h              
 libsurfit_la_HEADERS += src/surfit/cntr_internal.h     
 libsurfit_la_SOURCES += src/surfit/cntr_tcl.h          
+libsurfit_la_HEADERS += src/surfit/colorscale.cpp                                                  
 libsurfit_la_HEADERS += src/surfit/curv.h              
 libsurfit_la_SOURCES += src/surfit/curvs_tcl.h         
 libsurfit_la_HEADERS += src/surfit/curv_internal.h     
