--- a/surfit/Makefile.in
+++ b/surfit/Makefile.in
@@ -157,20 +157,20 @@ libsstuff_la_OBJECTS = $(am_libsstuff_la_OBJECTS)
 libsurfit_la_DEPENDENCIES = $(am__DEPENDENCIES_1) libsstuff.la
 am_libsurfit_la_OBJECTS = area.lo area_internal.lo area_tcl.lo \
 	cmofs.lo cntr.lo cntr_internal.lo cntr_tcl.lo cntr_trace.lo \
-	curv.lo curvs_tcl.lo curv_internal.lo curv_tcl.lo data.lo \
-	data_manager.lo free_elements.lo functional.lo f_area.lo \
-	f_area_surf.lo f_area_surf_ineq.lo f_area_ineq.lo \
-	f_area_mean.lo f_area_wmean.lo f_area_hist.lo f_cntr.lo \
-	f_cntr_ineq.lo f_cntr_smooth.lo f_completer.lo f_curv.lo \
-	f_curv_ineq.lo f_curv_surf.lo f_curv_surf_ineq.lo f_surf.lo \
-	f_surf_ineq.lo f_hist.lo f_ineq.lo f_mask.lo f_mask_ineq.lo \
-	f_mask_surf.lo f_mask_surf_ineq.lo f_mask_mean.lo \
-	f_mask_wmean.lo f_mean.lo f_points.lo f_points_ineq.lo \
-	f_points_tcl.lo f_trend.lo f_value.lo f_wmean.lo f_fault.lo \
-	f_method.lo f_triangulate.lo grid.lo grid_internal.lo \
-	grid_line.lo grid_line_internal.lo grid_line_tcl.lo \
-	grid_line_user.lo grid_tcl.lo grid_user.lo hist.lo \
-	hist_internal.lo hist_tcl.lo license.lo mask.lo \
+	colorscale.lo curv.lo curvs_tcl.lo curv_internal.lo \
+	curv_tcl.lo data.lo data_manager.lo free_elements.lo \
+	functional.lo f_area.lo f_area_surf.lo f_area_surf_ineq.lo \
+	f_area_ineq.lo f_area_mean.lo f_area_wmean.lo f_area_hist.lo \
+	f_cntr.lo f_cntr_ineq.lo f_cntr_smooth.lo f_completer.lo \
+	f_curv.lo f_curv_ineq.lo f_curv_surf.lo f_curv_surf_ineq.lo \
+	f_surf.lo f_surf_ineq.lo f_hist.lo f_ineq.lo f_mask.lo \
+	f_mask_ineq.lo f_mask_surf.lo f_mask_surf_ineq.lo \
+	f_mask_mean.lo f_mask_wmean.lo f_mean.lo f_points.lo \
+	f_points_ineq.lo f_points_tcl.lo f_trend.lo f_value.lo \
+	f_wmean.lo f_fault.lo f_method.lo f_triangulate.lo grid.lo \
+	grid_internal.lo grid_line.lo grid_line_internal.lo \
+	grid_line_tcl.lo grid_line_user.lo grid_tcl.lo grid_user.lo \
+	hist.lo hist_internal.lo hist_tcl.lo license.lo mask.lo \
 	mask_internal.lo mask_tcl.lo matlab.lo matr.lo matrD1.lo \
 	matrD1_aniso.lo matrD1_rect.lo matrD2.lo matrD2_rect.lo \
 	matr_diag.lo matr_eye.lo matr_onesrow.lo matr_cntrs.lo mrf.lo \
@@ -408,77 +408,78 @@ libsurfit_la_SOURCES = src/surfit/area.cpp \
 	src/surfit/area_internal.cpp src/surfit/area_tcl.cpp \
 	src/surfit/cmofs.cpp src/surfit/cntr.cpp \
 	src/surfit/cntr_internal.cpp src/surfit/cntr_tcl.cpp \
-	src/surfit/cntr_trace.cpp src/surfit/curv.cpp \
-	src/surfit/curvs_tcl.cpp src/surfit/curv_internal.cpp \
-	src/surfit/curv_tcl.cpp src/surfit/data.cpp \
-	src/surfit/data_manager.cpp src/surfit/free_elements.cpp \
-	src/surfit/functional.cpp src/surfit/f_area.cpp \
-	src/surfit/f_area_surf.cpp src/surfit/f_area_surf_ineq.cpp \
-	src/surfit/f_area_ineq.cpp src/surfit/f_area_mean.cpp \
-	src/surfit/f_area_wmean.cpp src/surfit/f_area_hist.cpp \
-	src/surfit/f_cntr.cpp src/surfit/f_cntr_ineq.cpp \
-	src/surfit/f_cntr_smooth.cpp src/surfit/f_completer.cpp \
-	src/surfit/f_curv.cpp src/surfit/f_curv_ineq.cpp \
-	src/surfit/f_curv_surf.cpp src/surfit/f_curv_surf_ineq.cpp \
-	src/surfit/f_surf.cpp src/surfit/f_surf_ineq.cpp \
-	src/surfit/f_hist.cpp src/surfit/f_ineq.cpp \
-	src/surfit/f_mask.cpp src/surfit/f_mask_ineq.cpp \
-	src/surfit/f_mask_surf.cpp src/surfit/f_mask_surf_ineq.cpp \
-	src/surfit/f_mask_mean.cpp src/surfit/f_mask_wmean.cpp \
-	src/surfit/f_mean.cpp src/surfit/f_points.cpp \
-	src/surfit/f_points_ineq.cpp src/surfit/f_points_tcl.cpp \
-	src/surfit/f_trend.cpp src/surfit/f_value.cpp \
-	src/surfit/f_wmean.cpp src/surfit/f_fault.cpp \
-	src/surfit/f_method.cpp src/surfit/f_triangulate.cpp \
-	src/surfit/grid.cpp src/surfit/grid_internal.cpp \
-	src/surfit/grid_line.cpp src/surfit/grid_line_internal.cpp \
-	src/surfit/grid_line_tcl.cpp src/surfit/grid_line_user.cpp \
-	src/surfit/grid_tcl.cpp src/surfit/grid_user.cpp \
-	src/surfit/hist.cpp src/surfit/hist_internal.cpp \
-	src/surfit/hist_tcl.cpp src/surfit/license.cpp \
-	src/surfit/mask.cpp src/surfit/mask_internal.cpp \
-	src/surfit/mask_tcl.cpp src/surfit/matlab.cpp \
-	src/surfit/matr.cpp src/surfit/matrD1.cpp \
-	src/surfit/matrD1_aniso.cpp src/surfit/matrD1_rect.cpp \
-	src/surfit/matrD2.cpp src/surfit/matrD2_rect.cpp \
-	src/surfit/matr_diag.cpp src/surfit/matr_eye.cpp \
-	src/surfit/matr_onesrow.cpp src/surfit/matr_cntrs.cpp \
-	src/surfit/mrf.cpp src/surfit/others_tcl.cpp \
-	src/surfit/pnts_internal.cpp src/surfit/pnts_tcl.cpp \
-	src/surfit/points.cpp src/surfit/solvers.cpp \
-	src/surfit/sort_alg.cpp src/surfit/surf.cpp \
-	src/surfit/surfs_tcl.cpp src/surfit/surf_internal.cpp \
-	src/surfit/surf_tcl.cpp src/surfit/surfit.cpp \
-	src/surfit/surfit_wrap.cxx src/surfit/variables.cpp \
-	src/surfit/triangle.cpp src/surfit/solvers/CG.cpp \
-	src/surfit/solvers/J.cpp src/surfit/solvers/JCG.cpp \
-	src/surfit/solvers/RF.cpp src/surfit/solvers/SSOR.cpp \
-	src/surfit/creeps/CreEPS.cpp src/surfit/area_tcl.h \
-	src/surfit/cntr_tcl.h src/surfit/curvs_tcl.h \
-	src/surfit/curv_tcl.h src/surfit/f_points_tcl.h \
-	src/surfit/f_method.h src/surfit/f_triangulate.h \
-	src/surfit/grid_line_tcl.h src/surfit/grid_tcl.h \
-	src/surfit/hist_tcl.h src/surfit/mask_tcl.h \
-	src/surfit/other_tcl.h src/surfit/others_tcl.h \
-	src/surfit/pnts_tcl.h src/surfit/surfs_tcl.h \
-	src/surfit/surf_tcl.h src/surfit/surfit_ie.h \
-	src/surfit/creeps/CreEPS.h
+	src/surfit/cntr_trace.cpp src/surfit/colorscale.cpp \
+	src/surfit/curv.cpp src/surfit/curvs_tcl.cpp \
+	src/surfit/curv_internal.cpp src/surfit/curv_tcl.cpp \
+	src/surfit/data.cpp src/surfit/data_manager.cpp \
+	src/surfit/free_elements.cpp src/surfit/functional.cpp \
+	src/surfit/f_area.cpp src/surfit/f_area_surf.cpp \
+	src/surfit/f_area_surf_ineq.cpp src/surfit/f_area_ineq.cpp \
+	src/surfit/f_area_mean.cpp src/surfit/f_area_wmean.cpp \
+	src/surfit/f_area_hist.cpp src/surfit/f_cntr.cpp \
+	src/surfit/f_cntr_ineq.cpp src/surfit/f_cntr_smooth.cpp \
+	src/surfit/f_completer.cpp src/surfit/f_curv.cpp \
+	src/surfit/f_curv_ineq.cpp src/surfit/f_curv_surf.cpp \
+	src/surfit/f_curv_surf_ineq.cpp src/surfit/f_surf.cpp \
+	src/surfit/f_surf_ineq.cpp src/surfit/f_hist.cpp \
+	src/surfit/f_ineq.cpp src/surfit/f_mask.cpp \
+	src/surfit/f_mask_ineq.cpp src/surfit/f_mask_surf.cpp \
+	src/surfit/f_mask_surf_ineq.cpp src/surfit/f_mask_mean.cpp \
+	src/surfit/f_mask_wmean.cpp src/surfit/f_mean.cpp \
+	src/surfit/f_points.cpp src/surfit/f_points_ineq.cpp \
+	src/surfit/f_points_tcl.cpp src/surfit/f_trend.cpp \
+	src/surfit/f_value.cpp src/surfit/f_wmean.cpp \
+	src/surfit/f_fault.cpp src/surfit/f_method.cpp \
+	src/surfit/f_triangulate.cpp src/surfit/grid.cpp \
+	src/surfit/grid_internal.cpp src/surfit/grid_line.cpp \
+	src/surfit/grid_line_internal.cpp src/surfit/grid_line_tcl.cpp \
+	src/surfit/grid_line_user.cpp src/surfit/grid_tcl.cpp \
+	src/surfit/grid_user.cpp src/surfit/hist.cpp \
+	src/surfit/hist_internal.cpp src/surfit/hist_tcl.cpp \
+	src/surfit/license.cpp src/surfit/mask.cpp \
+	src/surfit/mask_internal.cpp src/surfit/mask_tcl.cpp \
+	src/surfit/matlab.cpp src/surfit/matr.cpp \
+	src/surfit/matrD1.cpp src/surfit/matrD1_aniso.cpp \
+	src/surfit/matrD1_rect.cpp src/surfit/matrD2.cpp \
+	src/surfit/matrD2_rect.cpp src/surfit/matr_diag.cpp \
+	src/surfit/matr_eye.cpp src/surfit/matr_onesrow.cpp \
+	src/surfit/matr_cntrs.cpp src/surfit/mrf.cpp \
+	src/surfit/others_tcl.cpp src/surfit/pnts_internal.cpp \
+	src/surfit/pnts_tcl.cpp src/surfit/points.cpp \
+	src/surfit/solvers.cpp src/surfit/sort_alg.cpp \
+	src/surfit/surf.cpp src/surfit/surfs_tcl.cpp \
+	src/surfit/surf_internal.cpp src/surfit/surf_tcl.cpp \
+	src/surfit/surfit.cpp src/surfit/surfit_wrap.cxx \
+	src/surfit/variables.cpp src/surfit/triangle.cpp \
+	src/surfit/solvers/CG.cpp src/surfit/solvers/J.cpp \
+	src/surfit/solvers/JCG.cpp src/surfit/solvers/RF.cpp \
+	src/surfit/solvers/SSOR.cpp src/surfit/creeps/CreEPS.cpp \
+	src/surfit/area_tcl.h src/surfit/cntr_tcl.h \
+	src/surfit/curvs_tcl.h src/surfit/curv_tcl.h \
+	src/surfit/f_points_tcl.h src/surfit/f_method.h \
+	src/surfit/f_triangulate.h src/surfit/grid_line_tcl.h \
+	src/surfit/grid_tcl.h src/surfit/hist_tcl.h \
+	src/surfit/mask_tcl.h src/surfit/other_tcl.h \
+	src/surfit/others_tcl.h src/surfit/pnts_tcl.h \
+	src/surfit/surfs_tcl.h src/surfit/surf_tcl.h \
+	src/surfit/surfit_ie.h src/surfit/creeps/CreEPS.h
 #libsurfit_la_HEADERS += src/surfit/matrD2_aniso.h
 libsurfit_la_HEADERS = src/surfit/area.h src/surfit/area_internal.h \
 	src/surfit/cmofs.h src/surfit/cntr.h \
-	src/surfit/cntr_internal.h src/surfit/curv.h \
-	src/surfit/curv_internal.h src/surfit/surfit_data.h \
-	src/surfit/data_manager.h src/surfit/free_elements.h \
-	src/surfit/functional.h src/surfit/f_area.h \
-	src/surfit/f_area_surf.h src/surfit/f_area_surf_ineq.h \
-	src/surfit/f_area_ineq.h src/surfit/f_area_mean.h \
-	src/surfit/f_area_wmean.h src/surfit/f_area_hist.h \
-	src/surfit/f_cntr.h src/surfit/f_cntr_ineq.h \
-	src/surfit/f_cntr_smooth.h src/surfit/f_curv.h \
-	src/surfit/f_curv_ineq.h src/surfit/f_completer.h \
-	src/surfit/f_curv_surf.h src/surfit/f_curv_surf_ineq.h \
-	src/surfit/f_surf.h src/surfit/f_surf_ineq.h \
-	src/surfit/f_hist.h src/surfit/f_ineq.h src/surfit/f_mask.h \
+	src/surfit/cntr_internal.h src/surfit/colorscale.cpp \
+	src/surfit/curv.h src/surfit/curv_internal.h \
+	src/surfit/surfit_data.h src/surfit/data_manager.h \
+	src/surfit/free_elements.h src/surfit/functional.h \
+	src/surfit/f_area.h src/surfit/f_area_surf.h \
+	src/surfit/f_area_surf_ineq.h src/surfit/f_area_ineq.h \
+	src/surfit/f_area_mean.h src/surfit/f_area_wmean.h \
+	src/surfit/f_area_hist.h src/surfit/f_cntr.h \
+	src/surfit/f_cntr_ineq.h src/surfit/f_cntr_smooth.h \
+	src/surfit/f_curv.h src/surfit/f_curv_ineq.h \
+	src/surfit/f_completer.h src/surfit/f_curv_surf.h \
+	src/surfit/f_curv_surf_ineq.h src/surfit/f_surf.h \
+	src/surfit/f_surf_ineq.h src/surfit/f_hist.h \
+	src/surfit/f_ineq.h src/surfit/f_mask.h \
 	src/surfit/f_mask_ineq.h src/surfit/f_mask_surf.h \
 	src/surfit/f_mask_surf_ineq.h src/surfit/f_mask_mean.h \
 	src/surfit/f_mask_wmean.h src/surfit/f_mean.h \
@@ -699,6 +700,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cntr_shp.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cntr_tcl.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cntr_trace.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/colorscale.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/curv.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/curv_bln.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/curv_internal.Plo@am__quote@
@@ -1363,6 +1365,13 @@ cntr_trace.lo: src/surfit/cntr_trace.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/surfit/cntr_trace.cpp' object='cntr_trace.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o cntr_trace.lo `test -f 'src/surfit/cntr_trace.cpp' || echo '$(srcdir)/'`src/surfit/cntr_trace.cpp
+
+colorscale.lo: src/surfit/colorscale.cpp
+@am__fastdepCXX_TRUE@	if $(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT colorscale.lo -MD -MP -MF "$(DEPDIR)/colorscale.Tpo" -c -o colorscale.lo `test -f 'src/surfit/colorscale.cpp' || echo '$(srcdir)/'`src/surfit/colorscale.cpp; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/colorscale.Tpo" "$(DEPDIR)/colorscale.Plo"; else rm -f "$(DEPDIR)/colorscale.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/surfit/colorscale.cpp' object='colorscale.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o colorscale.lo `test -f 'src/surfit/colorscale.cpp' || echo '$(srcdir)/'`src/surfit/colorscale.cpp
 
 curv.lo: src/surfit/curv.cpp
 @am__fastdepCXX_TRUE@	if $(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT curv.lo -MD -MP -MF "$(DEPDIR)/curv.Tpo" -c -o curv.lo `test -f 'src/surfit/curv.cpp' || echo '$(srcdir)/'`src/surfit/curv.cpp; \
